# libcodemsg

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  main.c
examples/messages/: message_all.h  message_hello.h  message_hi.h
src/: CMakeLists.txt  message_collection.h.in  message_def.c  message_def.h  message_def_footer.h  message_def_header.h  message_inc.h
